# learning-ai

./: .cursorrules  .editorconfig  .env  .gitattributes  .gitignore  README.md  bun.lockb  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  skills-lock.json
.agents/skills/ponytail/: SKILL.md
google-sdk-demo/: main.py  pyproject.toml
langchain/: setup.py
langchain/contracts/: index.py
langchain/fundamentals/: index.py
langchain/fundamentals/python/: opps.py
langchain/learning_ai.egg-info/: PKG-INFO  SOURCES.txt
mcp-demo/: pyproject.toml
mcp-demo-py/: main.py  requirements.txt  server.py
mcp-serve-ts/: README.md  bun.lockb  bunfig.json  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
mcp-serve-ts/src/: env.ts  index.ts  setup-aliases.ts  sse-server.ts
mcp-serve-ts/src/api/: index.ts
mcp-serve-ts/src/brave-search/: index.ts
mcp-serve-ts/src/config/: index.ts
mcp-serve-ts/src/constants/: web-search.ts
mcp-serve-ts/src/contracts/: web-search.ts
projects/: .gitignore  READEME.md  requirement.txt
projects/ai-chatbot-scraper/: README.md  main.py  pyproject.toml
projects/lead-generation/: main.py
projects/lead_generation/: README.md  config.py  main.py
python/: alaram_clock.py  password_generator.py
python-mastery/: README.md  pyproject.toml
python-mastery/basics/: 01_types_and_functions.py  __init__.py  conditionals.py  patterns.py  types_and_functions.py
python/notebooks/: index.ipynb
src/: env.ts
src/app/: layout.tsx  page.tsx
src/components/: google-chat.tsx  sidebar.tsx
src/constants/: index.ts
(+29 files in other folders)
